Bumped java version to 11