@@ -2,47 +2,47 @@ package jafax.utils;
 
 import org.junit.Test;
 import utils.filefinder.FileFinder;
-import utils.filefinder.JavaFiles;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 
 public class FileFinderTest {
 
-    private static final Set<String> EXPECTED_FILE_NAMES = new HashSet<>(Arrays.asList(
+    private static final Set<String> EXPECTED_FILE_NAMES = Set.of(
             "Empty.java",
             "Client.java",
             "DataObject.java",
             "ExtendedData.java",
             "IProvider.java",
             "Provider.java"
-    ));
+    );
 
-    private static final Set<String> EXPECTED_SINGLE_FILE_NAME = new HashSet<>(Collections.singletonList(
+    private static final Set<String> EXPECTED_SINGLE_FILE_NAME = Set.of(
             "Empty.java"
-    ));
+    );
 
     @Test
     public void shouldFindJavaFiles() {
-        JavaFiles files = FileFinder.findFiles(Paths.get("src/test/resources/org/radum"));
-        List<String> javaFiles = files.javaFiles;
+        var files = FileFinder.findFiles(Paths.get("src/test/resources/org/radum"));
+        var javaFiles = files.javaFiles;
         assertEquals(6, javaFiles.size());
         assertEquals(0, files.jarFiles.size());
-        Set<String> classNames = getSimpleFileNames(javaFiles);
+        var classNames = getSimpleFileNames(javaFiles);
         assertEquals(EXPECTED_FILE_NAMES, classNames);
     }
 
     @Test
     public void shouldFindSingleJavaFile() {
-        JavaFiles files = FileFinder.findFiles(Paths.get("src/test/resources/org/radum/empty/empty1"));
-        List<String> javaFiles = files.javaFiles;
+        var files = FileFinder.findFiles(Paths.get("src/test/resources/org/radum/empty/empty1"));
+        var javaFiles = files.javaFiles;
         assertEquals(1, javaFiles.size());
         assertEquals(0, files.jarFiles.size());
-        Set<String> classNames = getSimpleFileNames(javaFiles);
+        var classNames = getSimpleFileNames(javaFiles);
         assertEquals(EXPECTED_SINGLE_FILE_NAME, classNames);
     }
 
@@ -56,7 +56,7 @@ public class FileFinderTest {
 
     @Test
     public void shouldNotFindAnything() {
-        JavaFiles emptyFiles = FileFinder.findFiles(Paths.get("src/test/resources/org/radum/empty/empty2"));
+        var emptyFiles = FileFinder.findFiles(Paths.get("src/test/resources/org/radum/empty/empty2"));
         assertEquals(0, emptyFiles.javaFiles.size());
         assertEquals(0, emptyFiles.jarFiles.size());
     }
